--- a/app/views/libraries/_library.html.erb
+++ b/app/views/libraries/_library.html.erb
@@ -1,53 +1,25 @@
-<div class="horizontal-flex">
-  <div class="left"><!-- Element for the flex -->
+<h2 class="title">Library details</h2>
+<!-- Vertical table with the library info -->
+<table class="table table-bordered table-condensed table-striped table-vertical">
+  <tr><th class="align-right">Pre pcr date</th><td><%= library.pre_pcr_date %></th></tr>
+  <tr><th class="align-right">Hyp</th><td><%= library.hyp %></th></tr>
+  <tr><th class="align-right">Fpu</th><td><%= library.fpu %></th></tr>
+  <tr><th class="align-right">Pcr date</th><td><%= library.pcr_date %></th></tr>
+  <tr><th class="align-right">Iap</th><td><%= library.iap %></th></tr>
+  <tr><th class="align-right">Clp</th><td><%= library.clp %></th></tr>
+  <tr><th class="align-right">Lnp</th><td><%= library.lnp %></th></tr>
+  <tr><th class="align-right">Sgp</th><td><%= library.sgp %></th></tr>
+  <tr><th class="align-right">Post pcr date</th><td><%= library.post_pcr_date %></th></tr>
+  <tr><th class="align-right">Notes</th><td><%= library.notes || '-' %></th></tr>
+  <tr><th class="align-right">Old ID</th><td><%= library.old_id %></th></tr>
+</table>
 
-    <h2 class="title">Library details</h2>
-    <!-- Vertical table with the library info -->
-    <table class="table table-bordered table-condensed table-striped table-vertical">
-      <tr>
-        <th class="align-right">Pre pcr date</th><td><%= library.pre_pcr_date %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Hyp</th><td><%= library.hyp %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Fpu</th><td><%= library.fpu %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Pcr date</th><td><%= library.pcr_date %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Iap</th><td><%= library.iap %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Clp</th><td><%= library.clp %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Lnp</th><td><%= library.lnp %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Sgp</th><td><%= library.sgp %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Post pcr date</th><td><%= library.post_pcr_date %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Notes</th><td><%= library.notes || '-' %></th>
-      </tr>
-      <tr>
-        <th class="align-right">Old ID</th><td><%= library.old_id %></th>
-      </tr>
-    </table>
+<h2 class='title'>DNA Extractions in this library</h2>
+<% @dna_extractions = library.dna_extractions.decorate %>
 
-    <%= link_to 'Edit this library info', edit_library_path(library),
-        class: 'btn btn-default' %>
-    <%= link_to 'Destroy this library', library, class: 'btn btn-default',
-        method: 'delete', data: { confirm: "Destroy library #{library.id}?" } %>
-  </div><!-- .left -->
+<%= render file: 'dna_extractions/index', locals: { omit_header: true, owner_id: library.id } %>
 
-  <div class="right flex-grow"><!-- Element for the flex -->
-    <h2 class='title'>DNA Extractions in this library</h2>
-    <% @dna_extractions = library.dna_extractions.decorate %>
-    <%= render file: 'dna_extractions/index', locals: { omit_header: true, owner_id: library.id } %>
-  </div>
-</div><!-- .horizontal-flex -->
+<%= link_to 'Edit this library info', edit_library_path(library),
+    class: 'btn btn-info' %>
+<%= link_to 'Destroy this library', library, class: 'btn btn-danger',
+    method: 'delete', data: { confirm: "Destroy library #{library.id}?" } %>
