--- a/app/assets/stylesheets/libraries.scss
+++ b/app/assets/stylesheets/libraries.scss
@@ -4,13 +4,14 @@
 
   .group {
     margin: 10px;
-    max-width: 32%;  // 1/3 of whole row! Supposes 3 elements.
+    flex: 1;
   }
 
   .with-scroll {
     .checkbox {
       max-height: 400px;
-      overflow: scroll;
+      overflow-y: scroll;
+      overflow-x: hidden;
     }
   }
 }
