--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,24 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @patient.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @patient.last_name %>
-</p>
-
-<p>
-  <strong>Acronym:</strong>
-  <%= @patient.acronym %>
-</p>
-
-<p>
-  <strong>Birthdate:</strong>
-  <%= @patient.birthdate %>
-</p>
-
-<%= link_to 'Edit', edit_patient_path(@patient) %> |
-<%= link_to 'Back', patients_path %>
+<%= render @patient %>
