add icons and tooltips to navbar

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -56,6 +56,12 @@ a.btn {
   transform: rotate(90deg);
 }
 
+.navbar {
+  i.fa {
+    font-size: 1.5em;
+  }
+}
+
 .modal-body {
   img {
     max-width: 100%;
