--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -1,3 +1,7 @@
+<%= render file: 'dna_extractions/index' %>
+
+<hr>
+
 <div class="header">
   <div class="title">
     <h1>
@@ -92,17 +96,9 @@
       </div>
 
       <button type="submit" class="btn btn-primary">
-        Submit the chosen files
-      </button>
-
-      <button type="reset" class="btn btn-default">
-        Reset the chosen files
+        Submit the gel picture
       </button>
     <% end %><!-- form -->
 
   </div><!-- .col-sm-12 -->
 </div><!-- .row -->
-
-<hr>
-
-<%= render file: 'dna_extractions/index' %>
