embbed an iframe linking to the gollum wiki

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                 <%= fa_icon 'flask' %>
               <% end %>
             </li>
-            <li data-toggle="tooltip" data-placement="bottom" title="DnaExtractions">
+            <li data-toggle="tooltip" data-placement="bottom" title="DNA Extractions">
               <%= link_to "/dna_extractions/select_quantification_files" do %>
                 <%= fa_icon 'tint' %>
               <% end %>
@@ -79,6 +79,11 @@
             <li data-toggle="tooltip" data-placement="bottom" title="Notebooks">
               <%= link_to "/notebooks" do %>
                 <%= fa_icon 'book' %>
+              <% end %>
+            </li>
+            <li data-toggle="tooltip" data-placement="bottom" title="Biocódices Wiki">
+              <%= link_to '/wiki' do %>
+                <%= fa_icon 'wikipedia-w' %>
               <% end %>
             </li>
           </ul>
