--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the Projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.project-tag {
+  font-family: monospace;
+  /* font-weight: bold; */
+}
+
+.enpv1,.enpv2 { color: dodgerBlue; }
+.exome { color: olive; }
+.pgsn,.pgsnm,.pgsa, .pgdk, .pgsam { color: orangeRed; }
+.cdp { color: forestGreen; }
+.ela { color: black; }
