--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
               <% end %>
             </li>
             <li data-toggle="tooltip" data-placement="bottom" title="Biocódices Wiki">
-              <%= link_to '/wiki' do %>
+              <%= link_to 'http://numenor.local/wiki' do %>
                 <%= fa_icon 'wikipedia-w' %>
               <% end %>
             </li>
