--- a/app/views/dna_extractions/index.html.erb
+++ b/app/views/dna_extractions/index.html.erb
@@ -13,6 +13,8 @@
   </div>
 <% end %>
 
+<%= render 'shared/search_form' %>
+
 <table class='table table-striped table-condensed'>
   <thead>
     <tr>
