--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -27,10 +27,10 @@
         <tr class="display-row collapsed" data-toggle="collapse" data-target="#detail-<%= library.id %>" class="accordion-toggle">
           <td><%= library.id %></td>
           <td class="project-tag">
-            <%= safe_join(library.projects.decorate.map(&:tag).uniq, ',') %>
+            <%= safe_join(library.projects.map(&:decorate).map(&:tag).uniq, ',') %>
           </td>
           <td><%= library.dna_extractions.count %></td>
-          <td><%= library.sequencings.map(&:id).uniq.join(', ') %></td>
+          <td><%= library.sequencings.map(&:id).join(', ') %></td>
           <td><%= library.laboratory %></td>
         </tr>
 
