implemented LibraryDnas and SequencingDnas

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,5 +1,5 @@
-::-moz-selection { background: gold; }
-::selection { background: gold; }
+::-moz-selection { background: papayaWhip; }
+::selection { background: papayaWhip; }
 
 .grey { color: grey; }
 .red { color: fireBrik; }
