--- a/app/views/dna_extractions/select_quantification_files.html.erb
+++ b/app/views/dna_extractions/select_quantification_files.html.erb
@@ -64,33 +64,22 @@
 
       <div class="field">
         <label class="control-label">DNA extractions shown in the picture</label>
-        <div class="selectable-dnas">
-
-          <div class="group with-scroll">
-            <h2 class="title">DNAs with pic</h2>
-            <div class="checkbox">
-              <% @dna_extractions_by_pic[:have_gel_picture].each do |dna_extraction| %>
-                <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
-                  <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
-                  <%= dna_extraction.description %>
-                </label>
-                <br>
-              <% end %>
+        <div class="selectable-dnas horizontal-flex">
+          <% @dna_extractions_by_pic.each do |group_name, dnas| %>
+            <% next if dnas.count.zero? %>
+            <div class="flex-child fixed-width option-group-container">
+              <h2 class="title"><%= ActiveSupport::Inflector.titleize group_name %></h2>
+              <div class="checkbox with-scroll option-group">
+                <% dnas.each do |dna_extraction| %>
+                  <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
+                    <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
+                    <%= dna_extraction.description %>
+                  </label>
+                  <br>
+                <% end %>
+              </div>
             </div>
-          </div>
-
-          <div class="group with-scroll">
-            <h2 class="title">DNAs without pic</h2>
-            <div class="checkbox">
-            <% @dna_extractions_by_pic[:dont_have_gel_picture].each do |dna_extraction| %>
-              <label for="gel_picture_associated_dnas_<%= dna_extraction.id %>">
-                <%= check_box_tag("gel_picture[associated_dnas][#{dna_extraction.id}]", dna_extraction.id) %>
-                <%= dna_extraction.description %>
-              </label>
-              <br>
-            <% end %>
-            </div>
-          </div>
+          <% end %>
 
         </div><!-- .selectable-dnas -->
       </div>
