implement control dnas with mock sample and patient

--- a/app/views/dna_extractions/_dna_extraction.html.erb
+++ b/app/views/dna_extractions/_dna_extraction.html.erb
@@ -6,11 +6,9 @@
         <%= dna_extraction.description %>
       </p>
       <ul>
-        <li>Is part of Library: <%= dna_extraction.libraries.map(&:id).join(', ') %></li>
-        <li>Was sequenced in Sequencing: <%= dna_extraction.sequencings.map(&:id).sort.join(', ') %></li>
-        <li>
-          Was sequenced as: <strong><%= dna_extraction.sequencing_dnas.map(&:external_id).join(', ') %></strong>
-        </li>
+        <li>Is part of Library: <%= dna_extraction.libraries_list %></li>
+        <li>Was sequenced in Sequencing: <%= dna_extraction.sequencings_list %></li>
+        <li>Was sequenced as: <%= dna_extraction.external_ids %></li>
       </ul>
     </div>
   </div>
