--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -1,62 +1,1 @@
-<p>
-  <strong>Laboratory:</strong>
-  <%= @library.laboratory %>
-</p>
-
-<p>
-  <strong>Notes:</strong>
-  <%= @library.notes %>
-</p>
-
-<p>
-  <strong>Hyp:</strong>
-  <%= @library.hyp %>
-</p>
-
-<p>
-  <strong>Fpu:</strong>
-  <%= @library.fpu %>
-</p>
-
-<p>
-  <strong>Pre pcr date:</strong>
-  <%= @library.pre_pcr_date %>
-</p>
-
-<p>
-  <strong>Pcr date:</strong>
-  <%= @library.pcr_date %>
-</p>
-
-<p>
-  <strong>Iap:</strong>
-  <%= @library.iap %>
-</p>
-
-<p>
-  <strong>Clp:</strong>
-  <%= @library.clp %>
-</p>
-
-<p>
-  <strong>Lnp:</strong>
-  <%= @library.lnp %>
-</p>
-
-<p>
-  <strong>Sgp:</strong>
-  <%= @library.sgp %>
-</p>
-
-<p>
-  <strong>Post pcr date:</strong>
-  <%= @library.post_pcr_date %>
-</p>
-
-<p>
-  <strong>Old:</strong>
-  <%= @library.old_id %>
-</p>
-
-<%= link_to 'Edit', edit_library_path(@library) %> |
-<%= link_to 'Back', libraries_path %>
+<%= render @library %>
