--- a/app/views/dna_extractions/_form.html.erb
+++ b/app/views/dna_extractions/_form.html.erb
@@ -14,16 +14,19 @@
   <div class="field">
     <label class="control-label">DNA extracted from this raw sample:</label><br>
     <%= collection_select(:dna_extraction, :sample_id, Sample.all.decorate,
-                          :id, :description, {},
-                          {class: "form-control inline"}) %>
+                          :id, :description, {prompt: 'Select a  sample or leave this for controls'},
+                          {class: 'form-control inline'}) %>
   </div>
   <div class="field">
-    <%= f.date_select :date %>
+    <%= f.date_select :date, include_blank: true %>
+  </div>
+  <div class="field">
+    <%= f.text_field :tag %>
   </div>
   <div class="field">
     <%= f.text_area :notes %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Create the Dna Extraction', class: 'btn btn-primary' %>
   </div>
 <% end %>
