--- a/app/views/sequencing_dnas/index.html.erb
+++ b/app/views/sequencing_dnas/index.html.erb
@@ -1,13 +1,14 @@
 <table class='table table-striped table-condensed'>
   <thead>
     <tr>
-      <th>DNA Tag</th>
       <th>Library</th>
+      <th>DNA Tag</th>
       <th>Patient name</th>
       <th>External ID</th>
       <th>Well</th>
       <th>i5</th>
       <th>i7</th>
+      <th>Report</th>
     </tr>
   </thead>
 
@@ -15,17 +16,26 @@
     <% sequencing_dnas.each do |sequencing_dna| %>
 
       <tr class="display-row collapsed" data-toggle="collapse" data-target="#dna-detail-<%= sequencing_dna.id %><%= "-#{owner_id}" if defined? owner_id %>" class="accordion-toggle">
-        <td><%= sequencing_dna.dna_extraction.tag %></td>
         <td><%= sequencing_dna.library_dna.library.id %></td>
+        <td><%= sequencing_dna.dna_extraction.tag %></td>
         <td><%= sequencing_dna.patient.full_name %></td>
         <td><%= sequencing_dna.external_id %></td>
         <td><%= sequencing_dna.library_dna.well %></td>
         <td><%= sequencing_dna.library_dna.i5 %></td>
         <td><%= sequencing_dna.library_dna.i7 %></td>
+        <% if sequencing_dna.report.file.nil? %>
+          <td></td>
+        <% else %>
+          <td>
+            <%= link_to sequencing_dna.report.url, 'data-toggle': 'tooltip', 'data-placement': 'top', title: 'Download report' do %>
+              <%= fa_icon 'file-text-o' %>
+            <% end %>
+          </td>
+        <% end %>
       </tr>
 
       <tr class="hidden-row">
-        <td colspan="7">
+        <td colspan="8">
           <div class="accordion-body collapse" id="dna-detail-<%= sequencing_dna.id %><%= "-#{owner_id}" if defined? owner_id %>">
 
             <%= render sequencing_dna.dna_extraction.decorate %>
@@ -37,5 +47,3 @@
     <% end %>
   </tbody>
 </table>
-
-
