--- a/app/views/sequencing_dnas/index.html.erb
+++ b/app/views/sequencing_dnas/index.html.erb
@@ -27,7 +27,7 @@
           <td></td>
         <% else %>
           <td>
-            <%= link_to sequencing_dna.report.url, 'data-toggle': 'tooltip', 'data-placement': 'top', title: 'Download report' do %>
+            <%= link_to sequencing_dna.report.url, 'data-toggle': 'tooltip', 'data-placement': 'top', title: 'Download report', target: '_blank' do %>
               <%= fa_icon 'file-text-o' %>
             <% end %>
           </td>
