--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
               <% end %>
             </li>
             <li data-toggle="tooltip" data-placement="bottom" title="DNA Extractions">
-              <%= link_to "/dna_extractions/select_quantification_files" do %>
+              <%= link_to "/dna_extractions" do %>
                 <%= fa_icon 'tint' %>
               <% end %>
             </li>
